docs(notebook): justify selected XGBoost model for production based on recall and dimensionality

--- a/challenge/exploration.ipynb
+++ b/challenge/exploration.ipynb
@@ -1613,6 +1613,16 @@
    "source": [
     "**With this, the model to be productive must be the one that is trained with the top 10 features and class balancing, but which one?**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Model Selection to be Productive\n",
+    "\n",
+    "\n",
+    "I selected the XGBoost model trained with the top 10 features and class balancing because it combines strong general performance with a significantly better recall on the minority class (flights with delay). It is also robust to feature redundancy and performs well even under reduced dimensionality."
+   ]
   }
  ],
  "metadata": {
